<resources>
    <string name="app_name">House app</string>
    <string name="name">Name</string>
    <string name="sign_up">sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="done">Done</string>
    <string name="title_home">Home</string>
    <string name="title_list">Requests</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
    <string name="request_id">ID: </string>
    <string name="status">status</string>
    <string name="problem_type">Type:</string>
    <string name="text">text </string>
    <string name="sign_in">SIGN IN</string>
    <string name="address">Address:</string>
    <string name="from">From:</string>
    <string name="info_status">Status:</string>
    <string name="info_date_sample">10:15 25.06.22</string>
    <string name="message">Message:</string>
    <string name="answer">Answer:</string>
    <string name="info_message_sample">This is a sample for user message in request info view. It should not break the borders and should looks well and pretty. It is too long and contains a lot of symbols. Long message, repeating, this is a long message. Verryyyyyyyyyyyyyyyyyyyyyyyyyyy long! Not long enough to destroy the textView, so lets make it much and much loooongeeeeeeeeeeeeeeeeeeeer.</string>
    <string name="info_message_sample_ru">Когда человек сознательно или интуитивно выбирает себе в жизни какую-то цель, жизненную задачу, он невольно дает себе оценку. По тому, ради чего человек живет, можно судить и о его самооценке - низкой или высокой. Если человек живет, чтобы приносить людям добро, облегчать их страдания, давать людям радость, то он оценивает себя на уровне этой своей человечности. Он ставит себе цель, достойную человека.</string>
    <string name="info_message_sample_ru2">ААаааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааа</string>
    <string name="problemType_sample">plumbing</string>
    <string name="status_completed">Completed</string>
    <string name="status_declined">Declined</string>
    <string name="send_request">Send request</string>
    <string name="your_name">Your name:</string>
    <string name="info_message_sample_ru3">Тут мало текста, очень мало текста</string>
    <string name="login">Войти</string>
    <string name="new_request">New request</string>
    <string name="signup_btn">Регистрация</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">E-mail</string>
    <string name="or_ru">или</string>
    <string name="status_done">done</string>
    <string name="status_in_progress">in progress</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_profile">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="refresh_requests">Refresh requests</string>
    <string name="your_reply_text">Your reply text</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="status_in_progress_info">In progress</string>
    <string name="logout_user">Sign out</string>
    <string name="refresh_users">Refresh users</string>
</resources>
