<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.houseapp.ui.homescreen.ProfileView">

    <data>

        <variable
            name="viewModel"
            type="com.example.houseapp.ui.homescreen.UserViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/title_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading}"
            app:trackCornerRadius="2dp" />

        <LinearLayout
            android:id="@+id/profile_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loading_line"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.HouseApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstnameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:lines="1"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{viewModel.user.firstName}" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.HouseApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="6dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastnameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:lines="1"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{viewModel.user.lastName}" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.HouseApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="6dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_profile"
                        android:lines="1"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{viewModel.user.address}" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.HouseApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginBottom="6dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:lines="1"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{viewModel.user.phone}" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_linear"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"
            android:text="@string/save" />

    </RelativeLayout>
</layout>
