<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.houseapp.ui.user.newrequestscreen.CreateRequestFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.houseapp.ui.user.newrequestscreen.CreateRequestViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sendButton"
            android:layout_alignParentBottom="true"
            android:indeterminate="true"
            android:visibility="@{viewModel.isLoading}"
            app:trackCornerRadius="2dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/form_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="6dp"
            android:paddingTop="10dp">


            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.HouseApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionInput"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperText="* required">

                        <AutoCompleteTextView
                            android:id="@+id/selectType"
                            style="@style/RequestInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/problem_type"
                            android:inputType="none"
                            android:text="@={viewModel.problemType}"
                            app:simpleItems="@array/type_items" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.HouseApp.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="241dp"
                        android:gravity="top"
                        app:counterEnabled="true"
                        app:counterMaxLength="300"
                        app:endIconDrawable="@drawable/ic_outline_clear"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperText="* required">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/descriptionInputField"
                            style="@style/RequestInfo"
                            android:layout_width="match_parent"
                            android:layout_height="215dp"
                            android:gravity="top|start"
                            android:hint="@string/message"

                            android:lineSpacingMultiplier="1.2"
                            android:maxLength="301"
                            android:text="@={viewModel.problemDescription}"
                            app:helperTextEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/sendButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_linear"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"
            android:onClick="@{() -> viewModel.createRequest()}"
            android:text="@string/send_request" />

    </RelativeLayout>
</layout>
